--- a/public/bundle.css
+++ b/public/bundle.css
@@ -1,3 +1,3 @@
-main.svelte-pjr1va.svelte-pjr1va{display:grid;grid-template-columns:repeat(5, 1fr)}.card.svelte-pjr1va.svelte-pjr1va{width:70px;padding:5px}.card.svelte-pjr1va img.svelte-pjr1va{width:70px;height:50%}.card.svelte-pjr1va h3.svelte-pjr1va{font-size:1rem}.card.svelte-pjr1va a.svelte-pjr1va{font-size:1rem;text-decoration:none;color:blue;text-align:center}
+.hecho.svelte-1cjvl9z.svelte-1cjvl9z{display:grid;grid-template-columns:repeat(5, 1fr)}.card.svelte-1cjvl9z.svelte-1cjvl9z{width:70px;padding:5px}.card.svelte-1cjvl9z img.svelte-1cjvl9z{display:block;width:70px;height:50%}.card.svelte-1cjvl9z h3.svelte-1cjvl9z{font-size:1rem;text-align:center}.card.svelte-1cjvl9z a.svelte-1cjvl9z{font-size:1rem;text-decoration:none;color:blue;text-align:center}
 
 /*# sourceMappingURL=bundle.css.map */
