--- a/public/bundle.css
+++ b/public/bundle.css
@@ -1,3 +1,3 @@
-.hecho.svelte-1cjvl9z.svelte-1cjvl9z{display:grid;grid-template-columns:repeat(5, 1fr)}.card.svelte-1cjvl9z.svelte-1cjvl9z{width:70px;padding:5px}.card.svelte-1cjvl9z img.svelte-1cjvl9z{display:block;width:70px;height:50%}.card.svelte-1cjvl9z h3.svelte-1cjvl9z{font-size:1rem;text-align:center}.card.svelte-1cjvl9z a.svelte-1cjvl9z{font-size:1rem;text-decoration:none;color:blue;text-align:center}
+.hecho.svelte-12uzs11.svelte-12uzs11{display:grid;grid-template-columns:repeat(5, 1fr)}summary.svelte-12uzs11.svelte-12uzs11{font-size:3rem;text-transform:uppercase}.card.svelte-12uzs11.svelte-12uzs11{width:70px;padding:5px}.card.svelte-12uzs11 img.svelte-12uzs11{display:block;width:70px;height:50%}.card.svelte-12uzs11 h3.svelte-12uzs11{font-size:1rem;text-align:center}.card.svelte-12uzs11 a.svelte-12uzs11{font-size:1rem;text-decoration:none;color:blue;text-align:center}
 
 /*# sourceMappingURL=bundle.css.map */
